--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -1,10 +1,8 @@
 <% content_for :head_content do -%>
- <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= @module_name ||controller.action_name %> 
          <%= (@project ? '- '+(@project.name||'') : '') %>
          - OpenFoundry
          <%= " __#{$$}__" if current_user.has_role?('site_admin')%></title>
-  <link rel="shortcut icon" href="http://www.openfoundry.org/images/favicon.ico" />
   <% bundle :name => "prototype" do %>
   <%= javascript_include_tag "prototype" %>
   <% end %>
@@ -17,7 +15,6 @@
   <%= javascript_include_tag "http://ssodev.openfoundry.org/sso/javascripts/langsync.js" %>
   <%= stylesheet_link_tag 'calendar' %>
   <%# end %>
-  <%#= render :partial => 'partials/top_menu_data' %>
   <% if request.user_agent =~ /(msie 2|msie 3|msie 4|msie 5)/i %>
    <script>alert('Please use Internet Explorer 6 or above.');</script>
   <% end %>
@@ -33,16 +30,12 @@
   </div>
 <% end -%>
 
+<% content_for :breadcrumbs_content do -%>
+  <%= breadcrumbs(@module_name) %>
+<% end -%>
+
 <% content_for :body_content do -%>
 <div id="of-body">
-  <div id="rt-breadcrumbs">
-    <div class="rt-breadcrumb-surround">
-      <div id="SiteMap">
-        <div id="BreadCrumbs"><%= breadcrumbs %></div>
-      </div>
-    </div>
-  </div>
-
   <div id="MiddlePane">
     <div id="MainContent" class="rt-grid-9 rt-push-3">
       <div id="Flash"><%= show_flash %></div>
