--- a/branches/sso/of/of/app/views/partials/_lang.html.erb
+++ b/branches/sso/of/of/app/views/partials/_lang.html.erb
@@ -1,2 +1,5 @@
-<%= language_select "lang", GetText.locale.to_s, :onchange => "SetLang(this.value)"%>
-
+<% if GetText.locale.to_s == 'en' %>
+<a href="javascript:SetLang('zh_TW')">繁體中文</a>
+<% else %>
+<a href="javascript:SetLang('en')">English</a>
+<% end %>
