--- a/branches/sso/of/of/app/views/partials/_search.html.erb
+++ b/branches/sso/of/of/app/views/partials/_search.html.erb
@@ -34,7 +34,7 @@
         <fieldset>
           <legend><%= _('Search in Class') %></legend>
           <div id='query_chk_class'>
-            <% %w(User Project News Release Fileentity Job).each_with_index do |model_class,i| %>
+            <% %w(Project News Release Fileentity Job).each_with_index do |model_class,i| %>
               <%= check_box_tag model_class, true, false, :name => "chk[#{model_class}]"%> 
               <%= _(model_class) %>
               <%= if i%6 == 5 ;"<br/>"; end %>
@@ -68,7 +68,7 @@
 <input type="radio"  name="sitesearch" value="" />
  The Web
 <input type="radio"  name="sitesearch"
- value="of.openfoundry.org" checked /> of.openfoundry.org <br />
+ value="www.openfoundry.org" checked /> www.openfoundry.org <br />
 
 </form>
 </fieldset>
