Refine project page and news list by hyder

--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -46,7 +46,14 @@
     </div>
     <div id="LeftWidget" class="rt-grid-3 rt-pull-9">   
     	<%if params["project_id"] != nil%>
-        <%=render :partial => "partials/project_logo", :locals => {:project => @project}%>
+          <%=render :partial => "partials/project_logo", :locals => {:project => @project}%>
+          <% module_title = capture do %>
+            <%= _('Project News') %>
+          <% end %>
+          <% module_content = capture do%>
+            <%=render :partial => "news/news_list", :locals => {:project => @project}%>
+          <% end %>
+          <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
         <div id="LeftMenu">
           <%=render :partial => "partials/project_menu", :locals => {:project => @project}%>
         </div>
