--- a/branches/sso/of/of/app/views/partials/_project_logo.html.erb
+++ b/branches/sso/of/of/app/views/partials/_project_logo.html.erb
@@ -18,4 +18,4 @@
     {:image_id => @project.icon, :id => @project.id, :type => 'Project', :back_to => project_path(@project) } %>
 <% end -%>
 
-<%= render :file => 'layouts/rt_module', :locals => {:module_content => module_content, :variation => ''}  %>
+<%= render :file => 'layouts/rt_module', :locals => {:module_content => module_content, :variation => 'square1'}  %>
