Refine news page and news list title=Project News, Announcements, News; And BreadCrumbs root title in of root_path

--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     	<%if params["project_id"] != nil%>
           <%=render :partial => "partials/project_logo", :locals => {:project => @project}%>
           <% module_title = capture do %>
-            <%= _('Project News') %>
+            <%= _('News') %>
           <% end %>
           <% module_content = capture do%>
             <%=render :partial => "news/news_list", :locals => {:project => @project}%>
