--- a/branches/sso/of/of/app/views/news/show.html.erb
+++ b/branches/sso/of/of/app/views/news/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%=h(@news.subject)%></h1>
+<!--<h1><%=h(@news.subject)%></h1>-->
 
 <p class="date"><%=_('Last Updated')%>:&nbsp;<%=tz_datetime(@news.updated_at)%></p>
 <div class="content">
