#37474 GetText.locale can not get vaild locale.

--- a/branches/sso/of/of/app/views/partials/_lang.html.erb
+++ b/branches/sso/of/of/app/views/partials/_lang.html.erb
@@ -1,4 +1,4 @@
-<% if GetText.locale.to_s == 'en' %>
+<% if I18n.locale.to_s == 'en' %>
 <a href="javascript:SetLang('zh_TW')">繁體中文</a>
 <% else %>
 <a href="javascript:SetLang('en')">English</a>
